--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,25 @@ version = "0.0.1-Alpha"
 
 repositories {
 	mavenCentral()
+	maven { url "http://repo.extendedclip.com/content/repositories/placeholderapi/" }
 	maven { url "https://repo.destroystokyo.com/repository/maven-public/" }
 	maven { url "https://oss.sonatype.org/content/groups/public/" }
 }
 
 dependencies {
+	implementation "me.mattstudios.utils:matt-framework:1.4"
+
+	implementation "com.zaxxer:HikariCP:3.4.5"
+	
+	compileOnly "me.clip:placeholderapi:2.10.9"
 	compileOnly "com.destroystokyo.paper:paper-api:1.16.3-R0.1-SNAPSHOT"
 }
 
 shadowJar {
 	archiveFileName.set("RuleConfirmation-${project.version}.jar")
+
+	relocate "com.zaxxer.hikari", "${project.group}.library.hikari"
+	relocate "me.mattstudios.mf", "${project.group}.library.utils"
 }
 
 processResources {
